# Lidar_AI_Solution

CUDA-CenterPoint/: CMakeLists.txt  data
CUDA-CenterPoint/tool/: environment.sh  export_neck_head.py  test_onnx.py
